# Vyu

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  README.md  UPSTREAM_COMMITS.txt  UPSTREAM_LOCK.json  VYU_POC_README.md  alembic.ini  compose.yaml  pyproject.toml  upstreams.yaml
.github/workflows/: ci.yml  deploy.yml  infra-plan.yml
apps/: __init__.py
apps/api/: main.py
apps/serverless/: __init__.py  handler.py
apps/web/: instrumentation.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/worker/: main.py
config/: deployment.aws.cognito.example.env  deployment.local.example.env  model_gateway.local.example.env  research_tool_registry.example.json  source_registry.example.json  tenant_governance.local.example.json
deploy/docker/: api.Dockerfile  (+3 more)
docs/: implementation-roadmap.md  production-grade-migration-plan.md  project-overview-and-usage.md
scripts/: accept_deployment_release_channel.py  backup_production_store.py  bootstrap_aws_placeholders.ps1  build_compliance_evidence_bundle.py  build_deployment_archive.py  build_deployment_release_channel_evidence.py  build_deployment_release_channel_export_summary.py  build_deployment_release_channel_provider_preflight.py  build_deployment_release_channel_target_readiness.py  build_deployment_release_evidence.py  build_deployment_release_handoff.py  build_deployment_release_handoff_archive.py  build_pilot_release_decision.py  check_deployment_release_package.py  check_deployment_transcript_bundle.py  check_production_readiness.py  configure_secrets.py  decide_deployment_release_channel_provider.py  decide_deployment_release_channel_target.py  deploy_smoke.py  export_openapi.py  export_report_from_store.py  generate_phase1_corpus.py  generate_typescript_client.py  import_source_policy.py  import_tenant_registry.py  inspect_production_store.py  inspect_review_queue.py  install_aws_cli.ps1  phase0_intake.py  plan4_operator_checklist.ps1  plan4_resume.ps1  plan_deployment_package.py  prepare_deployment_release_channel.py  prepare_deployment_release_channel_publication.py  probe_pubmed_staging.py  record_compliance_attestation.py  record_review_decision.py  render_cognito_operator_env.py  render_github_ci_vars.py  (+20 more)
tests/: test_api_service_shell.py  test_aws_cognito_provisioning.py  test_check_production_readiness.py  test_compliance_attestations.py  test_compliance_evidence_bundle.py  test_connector_health.py  test_connector_http.py  test_connector_source_gate.py  test_deployment_app_entrypoint.py  test_deployment_command_transcript.py  test_deployment_composition.py  test_deployment_http_adapter.py  test_deployment_operator_config.py  test_deployment_package_archive.py  test_deployment_package_evidence.py  test_deployment_package_manifest.py  test_deployment_package_plan.py  test_deployment_release_channel.py  test_deployment_release_channel_acceptance.py  test_deployment_release_channel_evidence.py  test_deployment_release_channel_export.py  test_deployment_release_channel_provider_decision.py  test_deployment_release_channel_provider_preflight.py  test_deployment_release_channel_publication.py  test_deployment_release_channel_target.py  test_deployment_release_channel_target_decision.py  test_deployment_release_evidence.py  test_deployment_release_handoff.py  test_deployment_release_handoff_archive.py  test_deployment_release_package.py  test_deployment_release_review.py  test_deployment_smoke.py  test_deployment_transcript_bundle.py  test_enterprise_oidc_idp.py  test_export_report_from_store_script.py  test_frontend_app_scaffold.py  test_human_review.py  test_identity_mapping.py  test_implementation_status.py  test_incident_recovery_drill.py  (+64 more)
(+590 files in other folders)
