[build-system]
requires = ["setuptools>=75,<76"]
build-backend = "setuptools.build_meta"

[project]
name = "vyu"
version = "0.1.0"
description = "Governed biomedical evidence research platform."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.14,<2",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
]

[dependency-groups]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
  "testcontainers[postgres]>=4.9,<5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "apps*", "scripts*"]
exclude = ["tests*", "upstreams*", "Additional_scripts_patch*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--strict-config --strict-markers"

[tool.coverage.run]
branch = true
source = ["src/vyu"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "apps", "scripts", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["E402"]
"src/vyu/**/__init__.py" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
files = ["src/vyu/db", "scripts/verify.py"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
